--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   server:
     build:
       context: .
-      dockerfile: Dockerfile.Server
+      dockerfile: Server.Dockerfile
     image: vid-stream-back:latest
     command: make run-server
     ports: 
@@ -13,7 +13,7 @@ services:
   client:
     build:
       context: .
-      dockerfile: Dockerfile.Client
+      dockerfile: Client.Dockerfile
     image: vid-stream-client:latest
     network_mode: host
     command: make run-client
