--- a/envoy.yaml
+++ b/envoy.yaml
@@ -45,5 +45,5 @@ static_resources:
             - endpoint:
                 address:
                   socket_address:
-                    address: host.docker.internal
+                    address: 0.0.0.0
                     port_value: 9090
